force-app/main/default/objects/Impact_2023_Registrant__c/Impact_2023_Registrant__c.object-meta.xml
<CustomObject>
    <description>Impact Conference 2032 object</description>
    <label>Impact 2023 Registrant</label>
    <nameField>
        <displayFormat>Reg-{00000}</displayFormat>
        <label>Impact 2023 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Impact 2023 Registrants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>