force-app/main/default/objects/Impact_2023_Registrant__c/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Person attended conference</description>
    <inlineHelpText>Person attended conference</inlineHelpText>
    <label>Attended</label>
    <type>Checkbox</type>
</CustomField>