force-app/main/default/objects/Impact_2023_Registrant__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Company for which the attendee/registrant works.</description>
    <inlineHelpText>Company for which the attendee/registrant works.</inlineHelpText>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>