force-app/main/default/objects/Impact_2023_Registrant__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>The first name of the registrant.</description>
    <inlineHelpText>Impact 2023 Registrant _ Salesforce.html</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>