force-app/main/default/objects/Impact_2023_Registrant__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>The last name of a registrant.</description>
    <inlineHelpText>Impact 2023 Registrant _ Salesforce.html</inlineHelpText>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>