force-app/main/default/objects/Impact_2023_Registrant__c/fields/Likes_Ice_Cream__c.field-meta.xml
<CustomField>
    <fullName>Likes_Ice_Cream__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Person attending likes ice cream!</description>
    <inlineHelpText>Person attending likes ice cream!</inlineHelpText>
    <label>Likes_Ice_Cream__c</label>
    <type>Checkbox</type>
</CustomField>