force-app/main/default/objects/Impact_2023_Registrant__c/fields/Preferred_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_First_Name__c</fullName>
    <description>First name of registrant</description>
    <inlineHelpText>First name of registrant</inlineHelpText>
    <label>Preferred First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>