force-app/main/default/objects/Impact_2023_Registrant__c/fields/Speaker_Bio__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Bio__c</fullName>
    <label>Speaker Bio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>